--- a/client/src/index.css
+++ b/client/src/index.css
@@ -152,3 +152,45 @@
 .tiptap div[data-youtube-video] &.ProseMirror-selectednode iframe {
      @apply  outline-purple-400 outline-4 outline transition-[outline] duration-150;
     }
+
+    /* Table-specific styling */
+  .tiptap table {
+   @apply border-collapse m-0 overflow-hidden table-fixed w-full;
+    }
+
+   .tiptap table td,
+   .tiptap table th {
+     @apply border border-solid border-black box-border min-w-4 py-2 px-3 relative align-top;
+      
+    }
+
+    .tiptap table th {
+      @apply bg-black font-bold text-left;
+    }
+
+    .tiptap table .selectedCell:after {
+      @apply bg-gray-500 content-none left-0 right-0 top-0 bottom-0 pointer-events-none absolute z-10;
+     
+      
+    }
+
+    .column-resize-handle {
+      @apply bg-purple-500 bottom-[-2px] pointer-events-none absolute right-[-2px] top-0 w-1;
+     
+    }
+  
+
+  .tableWrapper {
+    @apply my-6 mx-0 overflow-x-auto;
+   
+  }
+
+  &.resize-cursor {
+    @apply cursor-ew-resize;
+   
+  }
+ /* Link styles */
+  .tiptap a {
+ @apply text-primary cursor-pointer hover:text-secondary
+   
+  }
